# pydrools

./: .editorconfig  .gitignore  build.gradle  isort.cfg  requirements.build.txt  requirements.test.txt  requirements.txt  settings.gradle  setup.cfg  setup.py
.github/workflows/: create-release.yml  pythonpackage.yml
pydrools/: __init__.py  simple.py
pydrools/sqlalchemy/: __init__.py  fact_types.tpl.drl
pydrools/tests/: __init__.py  model.drl  rules.drl  test_gateway.py  test_kie.py  test_sqlalchemy.py
src/main/java/pydrools/: PyDroolsEntrypoint.java
