[metadata]
name = pydrools
version = 7.36.1.Final_0
author = "Cloves Almeida"
author-email = "<almeida.cloves@bcg.com>"
summary = "Drools Python wrapper using Py4J"
long-description= file: README.rst
long-description-content-type = text/x-rst; charset=UTF-8
url = https://github.com/cjalmeida/pydrools
requires-dist = setuptools
keywords = drools pydrools py4j
classifier =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Natural Language :: English
    Environment :: Console
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8


[options]
zip_safe = False
python_requires = >=3.7
include_package_data = False
tests_require = pytest>=4.6
packages = find:
package_dir =
    pydrools = pydrools

[options.packages.find]
exclude =
    pydrools.tests

[options.package_data]
pydrools =
    lib/*.jar

[bdist_wheel]
universal = 0

[flake8]
exclude = docs
max-line-length = 88

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']
